[fix] Make the python LLM script runnable from Java using the virtual env